--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-beautiful-dnd": "^13.1.0",
     "react-bootstrap": "^2.2.3",
     "react-country-region-selector": "^3.4.0",
+    "react-countup": "^6.5.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-datepicker": "^4.8.0",
     "react-datetime-picker": "^3.5.0",
